dev_tooling/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        # 5,597,308,284 requests/month
                        - match: { prefix: "/amplify/digital_wallet_service/should_allow_add_to_wallet" }
                          route:
                            cluster: nginx_service
                            prefix_rewrite: "/"
                        # 2,866,485 requests/month
                        - match: { prefix: "/amplify/v1/crm/users/<user_ari>/fraud_unsuspend" }
                          route:
                            cluster: apache_service
                            prefix_rewrite: "/"
                        # 445,003 requests/month
                        - match: { prefix: "/amplify/v1/activities/" }
                          route:
                            cluster: nginx_service
                            prefix_rewrite: "/"
                        # 2,521 requests/month
                        - match: { prefix: "/alm/internal/v1/scenarios/update" }
                          route:
                            cluster: apache_service
                            prefix_rewrite: "/"
                        - match: { prefix: "/no/match" }
                          route:
                            cluster: nginx_service
                            prefix_rewrite: "/"

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /var/log/envoy/access.log
                      log_format:
                        text_format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                  - name: envoy.access_loggers.open_telemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
                      common_config:
                        log_name: "envoy-access"
                        grpc_service:
                          envoy_grpc:
                            cluster_name: otel_cluster
                      attributes:
                        values:
                          - key: content_type
                            value: 
                              string_value: "http"
                          - key: x_affirm_endpoint_name
                            value:
                              string_value: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          
                          
                          
                      body:
                        string_value: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(LATENCY_SAMPLING_RATE)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\""
  clusters:
    - name: nginx_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: nginx_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nginx
                      port_value: 80
    - name: apache_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: apache_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: apache
                      port_value: 80
    - name: otel_cluster
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: otel_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: otel-collector
                      port_value: 4317
      health_checks:  # Add health check configuration here
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 2
          grpc_health_check:  # Use gRPC health check for the OTLP service
            service_name: ""
          event_log_path: "/var/log/envoy/otel_cluster_health_check.log" 
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
